[gd_scene load_steps=2 format=3 uid="uid://tuq7my44mrde"]

[ext_resource type="Script" uid="uid://2kkuio2uekg" path="res://scripts/mainmenu.gd" id="1_l6cm7"]

[node name="MainMenu" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
script = ExtResource("1_l6cm7")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -62.0
offset_top = 45.0
offset_right = 61.0
offset_bottom = 68.0
grow_horizontal = 2
text = "Goblin Gauntlet"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.5
offset_top = -92.0
offset_right = 50.5
offset_bottom = 92.0
grow_horizontal = 2
grow_vertical = 2

[node name="Start Game" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Start Game"

[node name="Upgrades" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Upgrades"
icon_alignment = 1

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Quit"

[node name="GoldLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -177.0
offset_top = 90.0
offset_right = -137.0
offset_bottom = 113.0
grow_horizontal = 0

[connection signal="pressed" from="VBoxContainer/Start Game" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Upgrades" to="." method="_on_upgrades_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_button_pressed"]
